--- a/assets/css/import.css
+++ b/assets/css/import.css
@@ -12,6 +12,7 @@
 @import url("cont-princ-aside-avec-main.css");
 @import url("filtre.css");
 @import url("nav-pied-page.css");
+@import url("bouton.css");
 
 /* devtools */
 @import url("devTools.css");
