--- a/assets/css/enrobage.css
+++ b/assets/css/enrobage.css
@@ -1,7 +1,7 @@
 .enrobage{
     display: grid;
     grid-template-columns: subgrid;
-    gap: 20px;
+    gap: var(--rythme-large-clp) 20px;
 
 }
 .enrobage>*{
