--- a/assets/css/langue.css
+++ b/assets/css/langue.css
@@ -23,6 +23,7 @@
     
     /* autres */
     --basique-gap : 20px;
+    --special-clp-rechercher: clamp(25ch, 7vw. 60ch);
     /* Polices */
     --police-titre: "Bodoni Moda", serif;
     --police-p: "Montserrat", sans-serif;
