--- a/assets/css/filtre.css
+++ b/assets/css/filtre.css
@@ -13,7 +13,7 @@
     margin-top: var(--rythme-petit);
 }
 
-.filtres section :is(div+div,div+p,p+div) {
+.filtres section :is(div+div,div+p,p+div,summary+div) {
     margin-top: var(--rythme-mince);
 }
 
@@ -26,4 +26,9 @@
 .filtres div{
     display: flex;
     justify-content: space-between;
+    align-items: center;
+}
+
+.filtres details > summary {
+    list-style-type: none;
 }
