modify components: filter/summury transition,nav-bottom style

--- a/assets/css/filtre.css
+++ b/assets/css/filtre.css
@@ -32,3 +32,17 @@
 .filtres details > summary {
     list-style-type: none;
 }
+
+.filtres svg{
+    max-width: 24px;
+}
+
+.filtres summary{
+    display: flex;
+    gap: var(--basique-gap);
+}
+
+.filtres details[open] summary svg {
+    transition: transform 0.3s ease-in-out;
+    transform: rotate(90deg);
+}
