add component card

--- a/assets/css/import.css
+++ b/assets/css/import.css
@@ -16,6 +16,7 @@
 /* FIXME: je cherche un meilleur nom pour le fichier pas envie de franglish */
 @import url("input-selection.css"); 
 @import url("galerie.css");   
+@import url("carte.css");   
 
 /* devtools */
 @import url("devTools.css");
