--- a/assets/css/filtre.css
+++ b/assets/css/filtre.css
@@ -28,6 +28,9 @@
     justify-content: space-between;
     align-items: center;
 }
+.filtres .select-a-droite {
+    display: flex;
+}
 
 .filtres details > summary {
     list-style-type: none;
