--- a/assets/css/nav-pied-page.css
+++ b/assets/css/nav-pied-page.css
@@ -5,7 +5,7 @@
     align-items: center;
 
     background-color: var(--couleurr-primaire);
-    padding: var(--rythme-moyen);
+    padding: var(--rythme-regulier);
 }
 
 [id="nav-pied-page"] .plan-de-site{
@@ -21,9 +21,21 @@
 [id="nav-pied-page"] ul{
     list-style: none;
 }
+[id="nav-pied-page"] h2{
+    font-size: var(--p);
+}
 [id="nav-pied-page"] a{
-    text-decoration: none;
-
+    text-decoration-color: transparent;
+    transition-property: text-decoration-color;
+	transition-duration: 500ms;
+    font-size: var(--p-petit);
+}
+[id="nav-pied-page"] a:hover{
+    text-decoration-color: var(--gris-50);
+    transition-duration: 500ms;
+}
+[id="nav-pied-page"] span{
+    font-size: var(--p-petit);
 }
 
 [id="nav-pied-page"] .titre-liste h2+ul,
@@ -42,4 +54,15 @@
 [id="nav-pied-page"] .copyright-site{
     display: flex;
     gap: var(--basique-gap);
+    align-items: center;
+}
+
+[id="nav-pied-page"] .icones-boite{
+    display: flex;
+    gap: var(--basique-gap);
+    
+
+    & img{
+        max-width: 26px;
+    }
 }
