--- a/assets/css/enrobage.css
+++ b/assets/css/enrobage.css
@@ -2,11 +2,18 @@
     display: grid;
     grid-template-columns: subgrid;
     gap: var(--rythme-large-clp) 20px;
-
+    position: relative;
 }
 .enrobage>*{
     grid-column: 2;
 }
 .plein-plan{
     grid-column: 1/-1;
+}
+
+.enrobage .remonter-svg{
+    display: block;
+    position: sticky;
+    bottom: 3%;
+    text-align: right;
 }
