--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -16,8 +16,7 @@ input {
 h1,h2{
     font-family: var(--police-titre);
 }
-header+article,
-article+article{
+header+article{
     margin-top: var(--rythme-regulier);
 }
 
@@ -51,6 +50,17 @@ article form+div{
 }
 
 .zoomEffet:hover {
-	transform: scale(1.05);
+	transform: scale(1.02);
 	transition-duration: 200ms;
+}
+
+.ombre-boite{
+    transition-property: box-shadow;
+	transition-duration: 350ms;
+    box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.0);
+}
+
+.ombre-boite:hover{
+    transition-duration: 350ms;
+    box-shadow: 9px 6px 20px 0px rgba(0,0,0,0.50);
 }
