--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -31,7 +31,7 @@
     --basique-gap: 20px;
     --special-clp-rechercher: clamp(25ch, 7vw. 60ch);
     /* Polices */
-    --police-titre: "Bodoni Moda", serif;
+    --police-titre: "DM Serif Text", serif;
     --police-p: "Montserrat", sans-serif;
 
 
