--- a/assets/css/fil-ariane.css
+++ b/assets/css/fil-ariane.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
 }
 .fil-ariane>div{
     display: flex;
