--- a/assets/css/filtre.css
+++ b/assets/css/filtre.css
@@ -20,6 +20,7 @@
 .filtres {
     border: solid 2px var(--couleur-tertiaire);
     padding: var(--rythme-mince);
+    box-shadow: 0px 6px 10px 0px rgba(0,0,0,0.30);
 }
 
 .filtres div{
@@ -30,5 +31,6 @@
 .filtres .select-a-droite {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: baseline;
+    gap: var(--basique-gap);
 }
