--- a/assets/css/galerie.css
+++ b/assets/css/galerie.css
@@ -9,6 +9,9 @@
         gap: var(--basique-gap);
         align-items: center;
     }
+    & h2{
+        color: var(--couleur-secondaire);
+    }
 }
 
 .galerie header+div{
